Cleanup some css, Fix dropdown menu clipping, Use css variables in preparation for theme switching

--- a/public/css/backlog.css
+++ b/public/css/backlog.css
@@ -51,16 +51,11 @@ input[type="checkbox"]:checked:before {
     color: #fff;
 }
 
-#add-game-modal {
-    color: #363636;
-    padding: 2em;
-}
-
-#search-results {
-    border: 1px solid #e1e4e8;
+.search-results-list {
+    border: 1px solid var(--border-background);
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
     overflow: hidden;
-    max-height: 200px;
+    max-height: 205px;
     overflow-y: auto;
     display: none;
 }
@@ -69,24 +64,24 @@ input[type="checkbox"]:checked:before {
     min-height: 280px;
 }
 
-#search-results li {
+.search-results-list li {
     cursor: pointer;
-    border-bottom: 1px solid #e1e4e8;
+    border-bottom: 1px solid var(--border-background);
     padding: .25em .0 .25em .5em;
     color: #6a6a6a;
     font-size: 14px;
-    font-style: italic;
     display: flex;
     justify-content: space-between;
     padding-right: .5em;
+    color: var(--foreground);
 }
 
-#search-results li:hover {
+.search-results-list li:hover {
     color: #fff;
     background: #3c91e6;
 }
 
-#search-results li .fas,
+.search-results-list li .fas,
 .fa-check {
     height: inherit;
 }
@@ -99,7 +94,7 @@ input[type="checkbox"]:checked:before {
     padding-right: 1em;
 }
 
-#search-tags {
+.added-game-tags {
     height: 100px;
     display: block;
 }
@@ -120,9 +115,8 @@ span.tag.added-tag {
     margin-top: 0;
 }
 
-.backlog-icon {
-    width: 20px !important;
-    height: 20px !important;
+svg.backlog-icon {
+    font-size: 16px;
     color: #bababa;
     cursor: pointer;
 }
